@@ -1,5 +1,6 @@
 Version Next
 
+    - Added HibernateIsolationJpaDialect
     - Added new method ThreadLocalContext.invokeWith()
     - Added trace and debug level logging to ThreadLocalContext
     - Fixed bug in AnnotatedXMLEventWriter when namespaces used
